@@ -19,6 +19,7 @@ dependencies {
 tasks.withType(Test).configureEach {
     jvmArgs += [
         "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
         "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
         "--add-opens=java.base/java.text=ALL-UNNAMED",
         "--add-opens=java.base/java.util=ALL-UNNAMED",
@@ -39,6 +40,7 @@ graalvmNative {
         all {
             buildArgs.addAll([
                 '--add-opens=java.base/java.io=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
                 '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
                 '--add-opens=java.base/java.text=ALL-UNNAMED',
                 '--add-opens=java.base/java.util=ALL-UNNAMED',
